Korrigiere .htaccess OPAC proxy

--- a/public/instance/proxy/opac-de-23/.htaccess
+++ b/public/instance/proxy/opac-de-23/.htaccess
@@ -1,1 +1,4 @@
-FallbackResource e:/hosting/development/2016/uri.hab.de/public/instance/proxy/opac-de-23/index.php
+RewriteEngine On
+RewriteBase /instance/proxy/opac-de-23/
+
+RewriteRule ^([0-9]{8}[0-9X](\.[a-z]+)?)$ /instance/proxy/opac-de-23/index.php/$1 [END]
