Verwende willdurand/negotiation

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "symfony/http-foundation": "^3.4",
         "hab/picarecord": "^1.1",
         "hab/picareader": "^1.2",
-        "hab/picawriter": "^1.0"
+        "hab/picawriter": "^1.0",
+        "willdurand/negotiation": "^2.3"
     }
 }
